# lingmo5support

./: .kde-ci.yml  CMakeLists.txt  Lingmo5SupportConfig.cmake.in  Lingmo5SupportMacros.cmake  PKGBUILD  README.md  metainfo.yaml
autotests/: CMakeLists.txt  pluginloadertest.cpp  pluginloadertest.h
po/ar/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/ast/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/az/: lingmo_engine_keystate.po
po/be/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/bg/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/bs/: lingmo_engine_keystate.po
po/ca/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/ca@valencia/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/cs/: liblingmo5support.po
po/de/: liblingmo5support.po  lingmo_engine_keystate.po
po/en_GB/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/eo/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/es/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/eu/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/fa/: liblingmo5support.po
po/fi/: liblingmo5support.po  lingmo_engine_keystate.po
po/fr/: liblingmo5support.po  lingmo_engine_keystate.po
po/fy/: lingmo_engine_keystate.po
po/ga/: lingmo_engine_keystate.po
po/gl/: liblingmo5support.po
po/gu/: lingmo_engine_keystate.po
po/he/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/hi/: lingmo_engine_keystate.po
po/hr/: lingmo_engine_keystate.po
po/hu/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/ia/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/id/: liblingmo5support.po  lingmo_engine_keystate.po
po/is/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/it/: liblingmo5support.po  lingmo_engine_keystate.po
po/ja/: liblingmo5support.po  lingmo_engine_keystate.po
po/ka/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/km/: lingmo_engine_keystate.po
po/ko/: liblingmo5support.po  lingmo_engine_keystate.po
po/lt/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/lv/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/mai/: lingmo_engine_keystate.po
po/ml/: lingmo_engine_keystate.po
po/ms/: lingmo_engine_keystate.po
po/nb/: lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/nds/: lingmo_engine_keystate.po
po/nl/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/nn/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/pa/: liblingmo5support.po
po/pl/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/pt/: lingmo_engine_keystate.po
po/pt_BR/: liblingmo5support.po  lingmo_engine_keystate.po
po/ro/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/ru/: liblingmo5support.po  lingmo_engine_devicenotifications.po
po/sa/: liblingmo5support.po
po/se/: lingmo_engine_devicenotifications.po
po/si/: lingmo_engine_keystate.po
po/sk/: liblingmo5support.po  lingmo_engine_keystate.po
po/sl/: liblingmo5support.po
po/sr/: lingmo_engine_keystate.po
po/sr@ijekavian/: lingmo_engine_keystate.po
po/sr@ijekavianlatin/: lingmo_engine_keystate.po
po/sr@latin/: lingmo_engine_keystate.po
po/sv/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/ta/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/tok/: lingmo_engine_keystate.po
po/tr/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/ug/: lingmo_engine_keystate.po
po/uk/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/vi/: lingmo_engine_keystate.po
po/zh_CN/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
po/zh_TW/: liblingmo5support.po  lingmo_engine_devicenotifications.po  lingmo_engine_keystate.po
src/: CMakeLists.txt  Messages.sh
src/dataengines/devicenotifications/: CMakeLists.txt  Messages.sh  devicenotificationsengine.cpp  devicenotificationsengine.h  ksolidnotify.h  lingmo-dataengine-devicenotifications.json
src/dataengines/keystate/: CMakeLists.txt  Messages.sh  keyservice.cpp  keyservice.h  keystate.cpp  keystate.h  lingmo-dataengine-keystate.json
src/declarativeimports/: CMakeLists.txt  Mainpage.dox  datamodel.cpp  datamodel.h  datasource.cpp  datasource.h  serviceoperationstatus.cpp  serviceoperationstatus.h  types.h
src/lingmo5support/: CMakeLists.txt  Mainpage.dox  config-lingmo5support.h.cmake  datacontainer.cpp  datacontainer.h  dataengine.cpp  dataengine.h  dataengineconsumer.cpp  dataengineconsumer.h  lingmo5support.cpp  lingmo5support.h  pluginloader.cpp  pluginloader.h  service.cpp  service.h  servicejob.cpp  servicejob.h  version.cpp  version.h
src/lingmo5support/private/: datacontainer_p.cpp  datacontainer_p.h  dataengine_p.h  dataengineconsumer_p.h  dataenginemanager.cpp  dataenginemanager_p.h  service_p.h  servicejob_p.h  storage.cpp  storage_p.h  storagethread.cpp  storagethread_p.h
tools/: migratedataengines.sh
